--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,17 +1,14 @@
 trigger:
   branches:
     include:
-      - main  
+      - main
 
 variables:
-- group: MyVariableGroup
-  # Variable visible en consola
-  environmentName: 'dev'
-  greeting: 'Hello from Azure DevOps!'
-
-  # Se puede referenciar un secreto definido en la sección de variables del pipeline
-  - name: mySecret
-    value: $(mySecret)  # Esto se referenciará desde la biblioteca de variables
+  - group: MyVariableGroup  # Referencia al grupo que contiene 'mySecret'
+  - name: environmentName
+    value: 'dev'
+  - name: greeting
+    value: 'Hello from Azure DevOps!'
 
 stages:
 - stage: TestVariablesAndSecrets
